imported Collections for empty set