@@ -4,6 +4,7 @@ import edu.wpi.first.wpilibj2.command.CommandBase;
 import edu.wpi.first.wpilibj2.command.Subsystem;
 import frc.robot.subsystems.Drivetrain;
 
+import java.util.Collections;
 import java.util.Set;
 
 public class ToggleSlowMode extends CommandBase {
@@ -31,6 +32,7 @@ public class ToggleSlowMode extends CommandBase {
 
     @Override
     public Set<Subsystem> getRequirements() {
-        return Set.of(drivetrain);
+        return Collections.emptySet();
+        // do not require drivetrain
     }
 }
